--- a/project/win/os_queue_test.vcxproj.filters
+++ b/project/win/os_queue_test.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\test\main.cpp">
+    <ClCompile Include="..\..\examples\os_queue_test.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
