--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-# CMakeList.txt : CMake project for libos, include source and define
+﻿# CMakeList.txt : CMake project for libos, include source and define
 # project specific logic here.
 #
 cmake_minimum_required(VERSION 3.8)
 message("CMake version: " ${CMAKE_VERSION})
 
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_STANDARD_REQUIRED True)
+set(CMAKE_C_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
